Add initial implementation of WiFi-Radar system with code quality tools
- Created main application in main.py for human pose estimation using WiFi signals.
- Added configuration management and command line argument parsing.
- Implemented logging for better traceability.
- Integrated various components: CSICollector, SignalProcessor, DualBranchEncoder, PoseEstimator, RTMPStreamer, Dashboard, and HouseVisualizer.
- Added scripts for setting up a virtual environment and running code quality checks.
- Introduced pre-commit configuration for code quality tools including flake8, black, isort, autoflake, pydocstyle, and docformatter.
- Developed a code quality script to automatically fix issues in the codebase.
- Configured setup.cfg for linting and formatting standards.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,17 @@ websockets>=10.0
 pyrtmp>=0.1.0
 pywifi>=1.1.12
 dash-bootstrap-components>=1.0.0
+pygame>=2.1.0
+pyyaml>=6.0
+
+# Code quality tools
+black>=22.3.0
+isort>=5.10.1
+pylint>=2.13.9
+flake8>=4.0.1
+mypy>=0.942
+docformatter>=1.5.0
+pydocstyle>=6.1.1
+autoflake>=1.4
+autopep8>=1.6.0
+pre-commit>=2.19.0
